--- a/produtos.css
+++ b/produtos.css
@@ -75,3 +75,16 @@ font-size: 18px;
   font-weight: bold;
   margin-top: 10 px;
 }
+
+
+footer{
+  text-align: center;
+  background: url("bg.jpg");
+  padding: 40px 0;
+}
+
+.copyright{
+  color: white;
+  font-size: 22px;
+  margin: 20px auto:
+}
