--- a/contato.css
+++ b/contato.css
@@ -21,6 +21,25 @@ form label form p  {
   padding: 10px 25px;
   width: 50%;
 }
+
 .checkbox {
   margin: 20px 0;
+}
+
+.enviar{
+  width: 40%;
+  padding: 15px 0;
+  background: gray;
+  color: blueviolet;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transition: 1s all;
+  cursor: pointer;
+}
+
+.enviar:hover {
+  background: darkgray;
+  transform: scale(1.2);
 }
