--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ body{
 	clear: left;
 }
 
+.principal{
+	padding:3em 0;
+	background: #ffffff;
+	width: 940px;
+	margin: 0 auto;
+}
+
 .principal p{
 	margin: 0 0 1em;
 }
@@ -37,21 +44,33 @@ body{
 	margin: 0 20px 20px 0;
 }
 
+.benficios{
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios{
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
 .imagembeneficios {
 	width: 60%;
 }
 
 .itens {
-	font-style: italic
-}
-
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
+	line-height: 1.5;
 }
 
 .mapa p{
 	padding: 3em 0;
+	background: linear-gradient(#fefefe, #888888);
 }
 
 .mapa{
