--- a/style.css
+++ b/style.css
@@ -62,12 +62,26 @@ body{
 
 .imagembeneficios {
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover{
+	opacity: 0.3;
 }
 
 .itens {
 	line-height: 1.5;
 }
 
+.itens:first-child{
+	font-weight: bold;
+}
+
+.itens:before{
+	content:"🕱";
+}
 .mapa p{
 	padding: 3em 0;
 	background: linear-gradient(#fefefe, #888888);
@@ -79,7 +93,7 @@ body{
 }
 
 .video{
-	widTh: 560px;
+	width: 560px;
 	margin: 1em auto;
 }
 
